--- a/asset/css/stylejquery.css
+++ b/asset/css/stylejquery.css
@@ -12,3 +12,52 @@
     height: 100px;
     width: 100px;
 }
+.test{
+    width: 100%;
+    height: 900px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.test p{
+    margin: 20px;
+    text-align: center;
+    visibility: hidden;
+}
+.test img{
+    opacity: 50%;
+}
+.form{
+    top: 250px;
+    left: 20px;
+    background-color: aqua;
+    height: 100px;
+    width: 120px;
+    border: 2px solid rebeccapurple;
+    position: absolute;
+}
+.rotation{
+    transform: rotate(180deg);
+    transition: 1s all;
+}
+#anim{
+    padding: 20px;
+    background-color: darkred;
+    border-radius: 30px;
+}
+.container{
+    width: 100%;
+    text-align: center;
+    position: relative;
+}
+#slider{
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    display: none;
+}
+#slider img{
+    width: 100%;
+    width: 80%;
+    height: 600px;
+}
