--- a/asset/css/style2.css
+++ b/asset/css/style2.css
@@ -45,3 +45,58 @@ nav ul li a:hover{
 }
 
 /*--------------------------Baniere--------------------------*/
+.baniere{
+    position: relative;
+    text-align: center;
+
+}
+#slider img{
+    width: 100%;
+    height: 80vh;
+    position: absolute;
+    left: 0;
+}
+.text{
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    left: 50%;
+    transform: translate(-50%);
+}
+.text h1{
+    font-size: 4em;
+    color: palegreen;
+    text-shadow: 2px 1px 2px darkgreen;
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+.btn{
+    padding: 10px 20px;
+    background-color: orange;
+    border: 2px solid blueviolet;
+    font-size: 1.2em;
+    color: black;
+    text-decoration: none;
+    border-radius: 30px;
+}
+.btn:hover{
+    background-color: blanchedalmond;
+    border: 2px solid blueviolet;
+    color: black;
+    translate: 0.5s;
+}
+#slider span{
+    position: absolute;
+    font-size: 6em;
+    color: blue;
+    text-shadow: 3px 2px 3px lawngreen;
+    z-index: 10;
+    top: 250px;
+    cursor: pointer;
+}
+#sgauche{
+    left: 50px;
+}
+#sdroite{
+    left: 1800px;
+}
