--- a/asset/css/style2.css
+++ b/asset/css/style2.css
@@ -44,6 +44,52 @@ nav ul li a:hover{
     color: azure;
 }
 
+/*--------------------------Burger--------------------------*/
+.burger{
+    width: 50px;
+    height: 30px;
+    cursor: pointer;
+    position: relative;
+    z-index: 30;
+    display: none;
+}
+.burger span{
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    background-color: firebrick;
+    top: 50%;
+    transform: translateY(-50%);
+    display: block;
+}
+.burger span::before,
+.burger span::after{
+    content: "";
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    background-color: firebrick;
+    top: 0;
+    left: 0;
+}
+.burger span::before{
+    transform: translateY(-10px);
+}
+.burger span::after{
+    transform: translateY(10px);
+}
+.croix span{
+    background-color: transparent;
+}
+.croix span::before{
+    transform: rotate(45deg)
+}
+.croix span::after{
+    transform: rotate(-45deg);
+}
+.active{
+    right: 0;
+}
 /*--------------------------Baniere--------------------------*/
 .baniere{
     position: relative;
@@ -95,8 +141,36 @@ nav ul li a:hover{
     cursor: pointer;
 }
 #sgauche{
-    left: 50px;
+    left: 5%;
 }
 #sdroite{
-    left: 1800px;
+    left: 90%;
+}
+
+/*--------------------------Responsive--------------------------*/
+/*--------------------------Burger--------------------------*/
+@media screen and (max-width:900px) {
+    .burger{
+        display: block;
+    }
+    nav{
+        position: absolute;
+        display: block;
+        background-color: dodgerblue;
+        top: 80px;
+        border-top: 2px solid gold;
+        padding: 50px;
+        width: 60%;
+        z-index: 20;
+        right: -100%;
+        transition: 1s ease-in-out;
+    }
+    nav ul{
+        display: block;
+        text-align: center;
+    }
+    .baniere h1{
+        font-size: 3em;
+        padding: 50px;
+    }
 }
