--- a/asset/css/style2.css
+++ b/asset/css/style2.css
@@ -256,6 +256,7 @@ h2{
     align-items: center;
     background-color: darkblue;
     padding: 50px;
+    position: relative;
 }
 .contact aside{
     width: 45%;
@@ -294,6 +295,20 @@ h2{
     width: 30%;
     margin-left: 50%;
     transform: translateX(-50%);
+}
+.reussite{
+    width: 150px;
+    background-color: burlywood;
+    color: darkred;
+    position: absolute;
+    font-size: 1.5em;
+    padding: 20px;
+    border-radius: 15px;
+    text-align: center;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: none;
 }
 /*--------------------------Footer--------------------------*/
 footer{
