--- a/asset/css/apy.css
+++ b/asset/css/apy.css
@@ -2,3 +2,45 @@
     margin: 0;
     padding: 0;
 }
+/* -----------------------------------header -----------------------------------*/
+
+header{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 80px;
+}
+header .logo{
+    width: 20%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.logo img{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+.logo p{
+    color: whitesmoke;
+    font-size: 1.5em;
+    font-weight: bold;
+    text-shadow: 2px 1px 2px goldenrod;
+}
+nav ul{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+nav ul li{
+    list-style: none;
+    padding: 10px;
+}
+nav ul li a{
+    text-decoration: none;
+    color: red;
+    font-size: 1.2em;
+}
+nav ul li a:hover{
+    color: goldenrod;
+}
